@@ -1,4 +1,4 @@
-$Id: History,v 1.26 2002-10-28 13:32:24 gcosmo Exp $
+$Id: History,v 1.27 2002-11-04 10:44:29 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Nov,  4th 2002 M.Dressel
+     - remove G4std:: where it does not belong to, 
+     - remove G4StringConversion,
+     - and added G4Nsplit_Weight.cc
 
 Oct, 28th 2002 M.Dressel geombias-V04-01-02
      - moving interfaces G4VCellScorer and G4VCellScorerStore back
